fix position of buttons and reduce extra space around text

--- a/docs/_sass/clipboard.scss
+++ b/docs/_sass/clipboard.scss
@@ -38,6 +38,7 @@ pre.codeblock-pre {
   align-content: flex-end;
   z-index: 9;
   position: relative;
+  text-align: right;
 }
 
 .clipbtn {
